--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>sass tutorial</title>
   </head>
-  <body></body>
+  <body>
+    <h2>cards</h2>
+    <div class="card">
+      <h1 class="card-title">this is a card title</h1>
+      <p class="card-body">
+        Lorem ipsum dolor sit <a href="#">amet consectetur</a>, adipisicing
+        elit. Beatae omnis quis tempore autem suscipit modi sapiente accusantium
+        ducimus recusandae expedita.
+      </p>
+    </div>
+  </body>
 </html>
